--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
     <%= yield %>
   </body>
+
+  <footer class="bg-dark p-2 fixed-bottom">
+    <div class="col-lg-12 d-flex justify-content-center">
+      <button type="button" class="btn btn-dark">
+        <i class="fa-brands fa-instagram"></i>
+      </button>
+      <button type="button" class="btn btn-dark">
+        <i class="fa-brands fa-facebook"></i>
+      </button>
+      <button type="button" class="btn btn-dark">
+        <i class="fa-brands fa-twitter"></i>
+      </button>
+    </div>
+    <div class="container text-center">
+      <span class="text-white">bangohan &copy; All Right Reserved.</span>
+    </div>
+  </footer>
 </html>
