--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class='container p-5'>
+  <div class='row'>
+    <div class = "mx-auto", style="width: 75%;">
+      <div class ="row">
+        <h3 class="font-weight-bold">会員一覧</h3>
+        <p class="p-2">(全<%= @users.count %>名）<p>
+      </div>
+      <table class = "table">
+        <thead class="thead-light">
+          <th>会員ID</th>
+          <th>氏名</th>
+          <th></th>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.id %></td>
+              <td>
+                <%= link_to user_path(user) do %>
+                  <%= user.name %>
+                <% end %>
+              </td>
+              <td>
+                <%= "フォローボタン" %>
+              </td>
+            </tr>
+          <% end %>
+          <td><%= paginate @users %></td>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
