[Add]レシピ関連ページ実装

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class="card text-dark">
+  <%= image_tag "22502827_s.jpg",size: "1200x600",class: "mx-auto" %>
+
+  <div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">
+
+      <h1 class="card-title font-weight-bold">About</h1>
+      <p class="card-text font-weight-bold">晩御飯は献立サイトです。<br>
+        登録した献立予定をカレンダーで簡単に確認することができます。<br>
+        また会員様同士でレシピを共有して楽しむこともできます。<br>
+        ぜひご利用ください。
+      </p>
+
+  </div>
+</div>
