--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class ="container">
+  <div class= "row">
+    <div class="card text-light">
+      <%= image_tag "22901610_s.jpg",size: "1200x600",class: "mx-auto" %>
+
+      <div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">
+          <h1 class="card-title font-weight-bold">晩御飯へようこそ！</h1>
+          <p class="card-text font-weight-bold">このサイトは、献立予定を立てる献立サイトになります。<br>
+            会員でない方もレシピの閲覧はできますが、<br>
+            レシピ登録や献立機能を使用するには会員登録が必要になります。
+          </p>
+    </div>
+  </div>
+</div>
