--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
         </tr>
 
       </table>
-      <%= link_to "レシピ一覧", recipes_path(@user), class: "btn btn-sm btn-success" %> | <%= link_to "いいねしたレシピ一覧", favorites_users_path, class: "btn btn-sm btn-primary" %>
+      <%= link_to "レシピ一覧", recipes_users_path(@user), class: "btn btn-sm btn-success" %> | <%= link_to "いいねしたレシピ一覧", favorites_users_path(@user), class: "btn btn-sm btn-primary" %>
     </div>
   </div>
 </div>
