--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Foods#index</h1>
-<p>Find me in app/views/foods/index.html.erb</p>
+<div class='container p-5'>
+  <div class='row'>
+    <div class = "mx-auto", style="width: 75%;">
+      <div class ="row">
+        <h3 class="font-weight-bold">材料名一覧</h3>
+        <p class="p-2">(全<%= @foods.total_count %>種）<p>
+      </div>
+      <table class = "table">
+        <thead class="thead-light">
+          <th>材料名</th>
+          <th>単位</th>
+          <th></th>
+        </thead>
+        <tbody>
+          <% @foods.each do |food| %>
+            <tr>
+              <td><%= food.food_name %></td>
+              <td><%= food.unit %></td>
+              <td><%= link_to '削除', food_path(food), method: :delete, class: 'btn btn-danger' %></td>
+            </tr>
+          <% end %>
+          <%= form_with model: @food, local: true do |f| %>
+            <tr>
+              <td><%= f.text_field :food_name %></td>
+              <td><%= f.text_field :unit %></td>
+              <td><%= f.submit '追加する', class: 'btn btn-primary' %></td>
+            </tr>
+          <% end %>
+          <td><%= paginate @foods %></td>
+        </tbody>
+      </table>
+      <div class="text-center">
+        <%= link_to "レシピ新規登録へ戻る", new_recipe_path, class: "btn btn-info" %>
+      </div>
+    </div>
+  </div>
+</div>
+
