--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 
     <%= stylesheet_pack_tag 'application',  media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <style>
+      .cover-text {
+        position: absolute;
+        padding: 50px;
+        font-size: 5px;
+        color: black;
+        z-index: 1;
+      }
+
+       body{
+         padding-bottom: 100px;
+      }
+    </style>
   </head>
 
   <body>
@@ -15,7 +28,7 @@
     <%= yield %>
   </body>
 
-  <footer class="bg-dark p-2 fixed-bottom">
+  <footer class="bg-dark p-1 fixed-bottom">
     <div class="col-lg-12 d-flex justify-content-center">
       <button type="button" class="btn btn-dark">
         <i class="fa-brands fa-instagram"></i>
