--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Recipes#edit</h1>
-<p>Find me in app/views/recipes/edit.html.erb</p>
+<div class = "container p-5">
+    <h3 class="font-weight-bold p-3">レシピ編集</h3>
+    <%= form_with model: @recipe, url: recipe_path(@recipe), method: :patch, local: true do |f| %>
+        <%= render 'form', f: f %>
+    <% end %>
+</div>
