--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Recipes#new</h1>
-<p>Find me in app/views/recipes/new.html.erb</p>
+<div class = "container p-5">
+    <h3 class="font-weight-bold p-3">レシピ新規登録</h3>
+    <%= form_with model: @recipe, url: recipes_path(@recipe), method: :post, local: true do |f| %>
+        <%= render 'form', f: f %>
+    <% end %>
+</div>
