--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -52,5 +52,12 @@
                 </div>
             </div>
         </div>
+        <div class="offset-md-5 mt-5">
+            <% if @recipe.listed_by?(current_user) %>
+              <td><%= link_to 'マイリストから外す', recipe_list_path(@recipe.id), method: :delete, class: 'btn btn-danger' %></td>
+            <% else %>
+              <td><%= link_to 'マイリストに追加する', recipe_lists_path(@recipe.id), method: :post, class: 'btn btn-success' %></td>
+            <% end %>
+        </div>
     </div>
 </div>
