--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,6 +5,8 @@
         <h3 class="font-weight-bold">レシピ一覧</h3>
         <p class="p-2">(全<%= @recipes.total_count %>件）<p>
       </div>
+      <div><%= link_to 'マイリスト一覧', recipe_lists_path(current_user), class: 'btn btn-success' %></div>
+      <div><%#= link_to '献立を立てる', user_calenders_path(current_user.id), class: 'btn btn-success' %></div>
       <div class="row">
         <% @recipes.each do |recipe| %>
           <div class="card border-light m-2">
