--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -12,8 +12,11 @@
     </h3>
     <div class= "row">
         <div class = "col-md-5">
-            <div class ="text-center">
-                <%= image_tag @recipe.get_image(400, 400) ,class: "shadow p-3 mb-5 bg-body round" %></tr>
+            <div>
+                <div id ="favorite_btn">
+                    <%= render 'favorites/favorite_btn', recipe: @recipe %>
+                </div>
+                <%= image_tag @recipe.get_image(400, 400) ,class: "shadow p-3 mb-5 bg-body round" %>
             </div>
             <table class = "table table-sm">
                 <thead class="thead-light">
