--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -14,12 +14,12 @@
                 <td><p><%= f.select :man_count, *[1..10] %></p></td>
             </tr>
             <tr>
-                <th><p><%= f.label :recipe, "作り方" %></p></th>
-                <td><p><%= f.text_area :recipe, placeholder: "1.〜〜。2.〜〜。3.〜〜。〜", size: "50x5" %></p></td>
+                <th><p><%= f.label :background, "レシピの生い立ち" %></p></th>
+                <td><p><%= f.text_area :background, placeholder: "例）◯◯番組で紹介されていたので作ってみました！", size: "50x5" %></p></td>
             </tr>
             <tr>
-                <th style ="font-size: 14px"><p><%= f.label :point, "コメント" %></p></th>
-                <td><p><%= f.text_area :point, placeholder: "例）◯◯番組で紹介されていたので作ってみました！", size: "50x5" %></p></td>
+                <th style ="font-size: 14px"><p><%= f.label :point, "ポイント" %></p></th>
+                <td><p><%= f.text_area :point, placeholder: "例）お肉の下準備が大事です！", size: "50x5" %></p></td>
             </tr>
             <tr>
                 <th></th>
@@ -33,7 +33,8 @@
         </table>
     </div>
     <div class = "col-md-5">
-        <div class="table-responsive">
+        <div class ="row">
+            <div class="table-responsive">
             <table class ="table text-center table-sm">
                 <thead class = "thead-light",style ="fo">
                     <%= link_to "材料名を追加する", foods_path, class: "btn btn-info" %>
@@ -60,6 +61,35 @@
                             %>
               </div>
             </div>
+        </div>
+        </div>
+    </div>
+</div>
+<div class ="row">
+    <div class="table-responsive">
+        <table class ="table text-center table-sm">
+            <thead class = "thead-light",style ="fo">
+                <tr>
+                    <th>作り方</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id='table-body-step'>
+                <%= f.fields_for :steps do |step| %>
+                    <%= render 'step_fields', f: step, recipe_id: @recipe.id %>
+                <% end %>
+            </tbody>
+        </table>
+        <div class="text-center">
+          <div class='links'>
+                        <%= link_to_add_association "追加ボタン", f, :steps, #cocoonのカラム追加機能
+                            class: 'btn btn-success',
+                            data: {
+                              association_insertion_node: 'tbody#table-body-step', #挿入先を指定
+                              association_insertion_method: 'after'    #挿入を前にする
+                            }
+                        %>
+          </div>
         </div>
     </div>
 </div>
