--- a/app/views/favorites/favorites.html.erb
+++ b/app/views/favorites/favorites.html.erb
@@ -5,7 +5,13 @@
         <h3 class="font-weight-bold">いいねしたレシピ一覧</h3>
         <p class="p-2">(全<%= @favorites.total_count %>件）<p>
       </div>
-      <div><%= link_to 'マイリスト一覧', recipe_lists_path(current_user), class: 'btn btn-success' %></div>
+      <div><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn btn-success' %></div>
+      <%= form_tag favorites_users_path(@user), method: :get do %>
+      <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
+          <%= button_tag type: 'submit', class: 'btn btn-warning' do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+      <% end %>
       <div class="row">
         <% @favorites.each do |recipe| %>
           <div class="card border-light m-2">
@@ -17,9 +23,9 @@
               <p class="card-text"><%= recipe.point %></p>
               <p class="card-text">制作者：<%= recipe.user.name %></p>
               <% if recipe.listed_by?(current_user) %>
-                <p class="card-text"><%= link_to 'マイリストから外す', recipe_list_path(recipe.id), method: :delete, class: 'btn btn-danger' %></p>
+                <p class="card-text"><%= link_to 'マイリストから外す', user_list_path(current_user, recipe_id: recipe.id), method: :delete, class: 'btn btn-danger' %></p>
               <% else %>
-                <p class="card-text"><%= link_to 'マイリストに追加する', recipe_lists_path(recipe.id), method: :post, class: 'btn btn-info' %></p>
+                <p class="card-text"><%= link_to 'マイリストに追加する', user_lists_path(current_user.id, recipe_id: recipe.id), method: :post, class: 'btn btn-info' %></p>
               <% end %>
             </div>
           </div>
