--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,6 +5,12 @@
         <h3 class="font-weight-bold">マイリスト一覧</h3>
         <p class="p-2">(全<%= @lists.total_count %>件）<p>
       </div>
+      <%= form_tag user_lists_path(current_user.id), method: :get do %>
+      <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
+          <%= button_tag type: 'submit', class: 'btn btn-warning' do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+      <% end %>
       <div class="row">
         <% @lists.each do |list| %>
           <div class="card border-light m-2">
@@ -16,7 +22,7 @@
               <p class="card-text"><%= list.recipe.point %></p>
               <p class="card-text">制作者：<%= list.recipe.user.name %></p>
             </div>
-            <%= link_to 'マイリストから外す', recipe_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger' %>
+            <%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger' %>
           </div>
         <% end %>
       </div>
