--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,9 +5,9 @@
             <%= link_to '編集する', edit_recipe_path(@recipe), class: "btn btn-success"%>  <%= link_to '削除する', recipe_path(@recipe), method: :delete, class: "btn btn-danger", data: {confirm: "削除しますか？"}%>
         <% end %>
         <% if @recipe.listed_by?(current_user) %>
-          <td><%= link_to 'マイリストから外す', recipe_list_path(@recipe.id), method: :delete, class: 'btn btn-dark' %></td>
+          <td><%= link_to 'マイリストから外す', user_list_path(current_user.id, recipe_id: @recipe.id), method: :delete, class: 'btn btn-dark' %></td>
         <% else %>
-          <td><%= link_to 'マイリストに追加する', recipe_lists_path(@recipe.id), method: :post, class: 'btn btn-info' %></td>
+          <td><%= link_to 'マイリストに追加する', user_lists_path(current_user.id, recipe_id: @recipe.id), method: :post, class: 'btn btn-info' %></td>
         <% end %>
     </h3>
     <div class= "row">
@@ -43,19 +43,13 @@
                 <div class ="col-md-8 offset-md-1, bg-light">
                     <ol>
                         <% @recipe.steps.each do |step| %>
-                            <li style="width: 100%"><%= step.method %></li></br>
-                            <%= image_tag step.get_image(100, 100) ,class: "shadow p-3 mb-5 bg-body round" %>
+                            <li style="width: 100%">
+                                <%= step.method %></br>
+                                <%= image_tag step.get_image(100, 100) ,class: "shadow p-3 mb-5 bg-body round" %>
+                            </li>
                         <% end %>
                     </ol>
-                </div>
-            </div>
-            <div class="row p-2"></div>
-            <div class ="row">
-                <div class ="col-md-3 font-weight-bold">
-                    <p>ポイント</p>
-                </div>
-                <div class ="col-md-8 offset-md-1, bg-light">
-                    <p><%= @recipe.point %></p>
+
                 </div>
             </div>
             <div class="row p-2"></div>
