--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -19,8 +19,9 @@
   		<% end %>
     </div>
 	</div>
+	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
-	  <div class ="col-md-3">
+	  <div class ="col-md-3", id= "menu_form">
 	    <%= render 'menu_form', menu: @menu %>
 	  </div>
 	  <div class ="col-md-8 offset-md-1">
