[Fix]レイスアウトの修正及びエラー解消

--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with model: comment, url: recipe_comments_path(recipe.id), method: :post, local: false do |f| %>
-  <%= f.text_area :content, rows:'3',placeholder: "コメントをここに", class: "w-50" %>
-  <%= f.submit "送信する", class: "btn btn-info" %>
+<% if user_signed_in? %>
+  <%= form_with model: comment, url: recipe_comments_path(recipe.id), method: :post, local: false do |f| %>
+    <%= f.text_area :content, rows:'3',placeholder: "コメントをここに", class: "w-50" %>
+    <%= f.submit "送信する", class: "btn btn-info" %>
+  <% end %>
 <% end %>
