--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -22,7 +22,7 @@
               <p class="card-text"><%= list.recipe.point %></p>
               <p class="card-text">制作者：<%= list.recipe.user.name %></p>
             </div>
-            <%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger' %>
+            <%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger btn-sm' %>
           </div>
         <% end %>
       </div>
