--- a/app/views/recipes/_step_fields.html.erb
+++ b/app/views/recipes/_step_fields.html.erb
@@ -1,11 +1,23 @@
-<tr class = "nested-fields">
-  <td>
-    <%= f.text_field :method, size: '10'%>
-  </td>
-  <td>
-    <%= f.file_field :image, accept: "image/*" %>
-  </td>
-  <td>
-    <%= link_to_remove_association '削除', f, class: 'btn btn-danger' %>
-  </td>
-</tr>
+<div class="nested-fields">
+  <div class = "card h-300 w-30">
+    <div id ="preview_card">
+      <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
+    </div>
+    <p class="card-text"><%= f.file_field :image, accept: "image/*", id: 'image' %></p>
+    <p class="card-text"><%= f.text_area :method, size: "30x5" %></p>
+    <p class="card-text"><%= link_to_remove_association '削除', f, class: 'btn btn-danger' %></p>
+  </div>
+</div>
+
+<script>
+  var element = document.getElementById('image')
+  console.log(element)
+  element.addEventListener('change', function(e) {
+    console.log(e)
+    var fileReader = new FileReader();
+    fileReader.readAsDataURL(e.target.files[0]);
+    fileReader.onload = (function() {
+      document.getElementById('preview').src = fileReader.result
+    });
+  })
+</script>
