--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,13 @@
   <footer class="bg-dark p-1 fixed-bottom">
     <div class="col-lg-12 d-flex justify-content-center">
       <button type="button" class="btn btn-dark">
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fab fa-instagram"></i>
       </button>
       <button type="button" class="btn btn-dark">
-        <i class="fa-brands fa-facebook"></i>
+        <i class="fab fa-facebook"></i>
       </button>
       <button type="button" class="btn btn-dark">
-        <i class="fa-brands fa-twitter"></i>
+        <i class="fab fa-twitter"></i>
       </button>
     </div>
     <div class="container text-center">
